--- a/karta5.html
+++ b/karta5.html
@@ -160,6 +160,9 @@
         float: left;
         padding: 20px;
       }
+      .zmien3 {
+        float: right;
+      }
       button {
         cursor: pointer;
         background-color: rgba(0, 0, 0, 0.6);
@@ -176,7 +179,9 @@
     </style>
   </head>
 
-  
+  <div class="zmien3">
+    <a href="wybor.html"><button>Wróć</button></a>
+  </div>
     <div id="container">
 
     <div id="topbar">
