--- a/mapa.html
+++ b/mapa.html
@@ -86,13 +86,22 @@
         margin-top: 1%; /* Odstęp między obrazkiem a napisem */
         color: #f4f0f0; /* Kolor tekstu */
       }
+      .zmien3 {
+        float: right;
+        margin-left: 1100px;
+      }
     </style>
   </head>
   <body>
+    
     <div class="image-container">
+      <div class="zmien3">
+        <a href="karta3.html"><button>Wróć</button></a>
+      </div>
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
+   
     <div class="tile tile-1">
       <h2>🔒</h2></a>
     </div>
@@ -100,5 +109,6 @@
     <div class="tile tile-3"><a href="jezioro.html"><h3>🔒Włoskie jezioro</h3></a></div>
     <div class="tile tile-4"><a href="zamek.html"><h3>🔒Zamek Caro-Kann</h3></a></div>
     <div class="tile tile-5"><h2>🔒</h2></div>
+    
   </body>
 </html>
