--- a/mat.html
+++ b/mat.html
@@ -101,6 +101,9 @@
       a {
         text-decoration: none;
       }
+      .zmien3 {
+        float: right;
+      }
     </style>
   </head>
   <body>
@@ -129,6 +132,9 @@
       <div class="info-container">
         <h2>🏆</h2>
         <p>Kończące uderzenie</p>
+      </div>
+      <div class="zmien3">
+        <a href="karta3.html"><button>Wróć</button></a>
       </div>
     </div>
   </body>
