--- a/mistrzfigur.html
+++ b/mistrzfigur.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mistrz figur (Master of puppets)</title>
+    <style>
+      .zmien3 {
+        float: right;
+      }
+    </style>
   </head>
   <body>
+    <div class="zmien3">
+      <a href="karta3.html"><button>Wróć</button></a>
+    </div>
     <main>
       <h2>Mistrz figur (Master of puppets)</h2>
       <table border="1">
