--- a/wybor.html
+++ b/wybor.html
@@ -62,9 +62,15 @@
         visibility: visible;
         opacity: 1;
       }
+      .zmien3 {
+        float: right;
+      }
     </style>
   </head>
   <body>
+    <div class="zmien3">
+      <a href="index.html"><button>Wróć</button></a>
+    </div>
     <h1>Wybierz kartę</h1>
 
     <div class="image-container">
