--- a/mag.html
+++ b/mag.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <main class="card">
+      <div class="zmien3">
+        <a href="index.html"><button>Wróć</button></a>
+      </div>
       <header class="header">
         <img src="images/jas.png" alt="Postać" />
         <div>
