--- a/karta3.html
+++ b/karta3.html
@@ -391,13 +391,13 @@
         <h3><p>Podnoszenie poziomu broni </h3>
         
           <a href="https://lichess.org/training/Caro-Kann_Defense"
-            ><p> Obrona Caro-Kann  ↗️70/100</p></a>
+          target="_blank"><p> Obrona Caro-Kann  ↗️70/100</p></a>
           <a href="https://lichess.org/training/Italian_Game"
-              ><p> Partia Włoska  ↗️40/100</p></a>
+          target="_blank"><p> Partia Włoska  ↗️40/100</p></a>
              <a href="https://lichess.org/training/xRayAttack"
-                ><p> Mat Rentgenem ↗️80/100 </p></a>
+             target="_blank"><p> Mat Rentgenem ↗️80/100 </p></a>
                 <a href="https://lichess.org/training/smotheredMate"
-                  ><p> Mat Beniowskiego ↗️↙80/100</p></a>
+                target="_blank" ><p> Mat Beniowskiego ↗️↙80/100</p></a>
       </div>
       <div id="footer">
         <a href="ranking.html"><h3>Wyzwanie na pojedynek ⚔️</h3></a>
