--- a/wladca.html
+++ b/wladca.html
@@ -60,6 +60,7 @@
   </head>
   <body>
     <div class="carousel">
+      <h1>Obecny</h1>
       <input type="radio" name="carousel" id="slide1" checked />
       <input type="radio" name="carousel" id="slide2" />
       <input type="radio" name="carousel" id="slide3" />
@@ -77,6 +78,7 @@
       </div>
     </div>
     <div class="carousel">
+      <h1>Legendarny</h1>
       <input type="radio" name="carousel" id="slide1" checked />
       <input type="radio" name="carousel" id="slide2" />
       <input type="radio" name="carousel" id="slide3" />
