--- a/wladca.html
+++ b/wladca.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karuzela</title>
+    <title>Karuzele</title>
     <style>
       body {
         display: flex;
@@ -13,9 +13,12 @@
         margin: 0;
         background-color: #f0f0f0;
       }
+      .carousel-container {
+        display: flex;
+        gap: 20px;
+      }
       .carousel {
-        width: 500px;
-        height: 500px;
+        width: 300px;
         overflow: hidden;
         position: relative;
       }
@@ -59,40 +62,43 @@
     </style>
   </head>
   <body>
-    <div class="carousel">
-      <h1>Obecny</h1>
-      <input type="radio" name="carousel" id="slide1" checked />
-      <input type="radio" name="carousel" id="slide2" />
-      <input type="radio" name="carousel" id="slide3" />
+    <div class="carousel-container">
+      <div class="carousel">
+        <h1>Obecny</h1>
+        <input type="radio" name="carousel1" id="slide1" checked />
+        <input type="radio" name="carousel1" id="slide2" />
+        <input type="radio" name="carousel1" id="slide3" />
 
-      <div class="slides">
-        <div class="slide"><img src="images/b.png" alt="Obraz 1" /></div>
-        <div class="slide"><img src="images/c.png" alt="Obraz 2" /></div>
-        <div class="slide"><img src="images/b.png" alt="Obraz 3" /></div>
+        <div class="slides">
+          <div class="slide"><img src="image1.jpg" alt="Obraz 1" /></div>
+          <div class="slide"><img src="image2.jpg" alt="Obraz 2" /></div>
+          <div class="slide"><img src="image3.jpg" alt="Obraz 3" /></div>
+        </div>
+
+        <div class="controls">
+          <label for="slide1">1</label>
+          <label for="slide2">2</label>
+          <label for="slide3">3</label>
+        </div>
       </div>
 
-      <div class="controls">
-        <label for="slide1">1</label>
-        <label for="slide2">2</label>
-        <label for="slide3">3</label>
-      </div>
-    </div>
-    <div class="carousel">
-      <h1>Legendarny</h1>
-      <input type="radio" name="carousel" id="slide1" checked />
-      <input type="radio" name="carousel" id="slide2" />
-      <input type="radio" name="carousel" id="slide3" />
+      <div class="carousel">
+        <h1>Legendarny</h1>
+        <input type="radio" name="carousel2" id="slide4" checked />
+        <input type="radio" name="carousel2" id="slide5" />
+        <input type="radio" name="carousel2" id="slide6" />
 
-      <div class="slides">
-        <div class="slide"><img src="images/b.png" alt="Obraz 1" /></div>
-        <div class="slide"><img src="images/c.png" alt="Obraz 2" /></div>
-        <div class="slide"><img src="images/b.png" alt="Obraz 3" /></div>
-      </div>
+        <div class="slides">
+          <div class="slide"><img src="image4.jpg" alt="Obraz 4" /></div>
+          <div class="slide"><img src="image5.jpg" alt="Obraz 5" /></div>
+          <div class="slide"><img src="image6.jpg" alt="Obraz 6" /></div>
+        </div>
 
-      <div class="controls">
-        <label for="slide1">1</label>
-        <label for="slide2">2</label>
-        <label for="slide3">3</label>
+        <div class="controls">
+          <label for="slide4">1</label>
+          <label for="slide5">2</label>
+          <label for="slide6">3</label>
+        </div>
       </div>
     </div>
   </body>
