--- a/wladca.html
+++ b/wladca.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karuzele</title>
+    <title>muzeum</title>
     <style>
       body {
         display: flex;
@@ -11,7 +11,11 @@
         align-items: center;
         height: 100vh;
         margin: 0;
-        background-color: #f0f0f0;
+        background-image: url("images/muzeum.png");
+        background-size: cover;
+      }
+      h1 {
+        color: aliceblue;
       }
       .carousel-container {
         display: flex;
@@ -35,7 +39,7 @@
         flex-shrink: 0;
       }
       img {
-        width: 100%;
+        width: 30%;
         height: auto;
       }
       .controls {
@@ -59,45 +63,73 @@
       #slide3:checked ~ .slides {
         transform: translateX(-200%);
       }
+      #slide4:checked ~ .slides {
+        transform: translateX(0%);
+      }
+      #slide5:checked ~ .slides {
+        transform: translateX(-100%);
+      }
+      #slide6:checked ~ .slides {
+        transform: translateX(-200%);
+      }
+      .carousel-item {
+        position: relative;
+      }
+      .carousel-caption {
+        position: absolute;
+
+        bottom: 0;
+        color: white;
+      }
     </style>
   </head>
   <body>
     <div class="carousel-container">
       <div class="carousel">
-        <h1>Obecny</h1>
+        <h1>Legendarny</h1>
         <input type="radio" name="carousel1" id="slide1" checked />
         <input type="radio" name="carousel1" id="slide2" />
         <input type="radio" name="carousel1" id="slide3" />
 
         <div class="slides">
-          <div class="slide"><img src="image1.jpg" alt="Obraz 1" /></div>
-          <div class="slide"><img src="image2.jpg" alt="Obraz 2" /></div>
-          <div class="slide"><img src="image3.jpg" alt="Obraz 3" /></div>
+          <div class="slide">
+            <a href="karpow.html"
+              ><img src="images/karpov.png" alt="Obraz 1"
+            /></a>
+            <div class="carousel-caption"><h1>Anatolij Karpow</h1></div>
+          </div>
+          <div class="slide"><img src="images/karpov.png" alt="Obraz 2" /></div>
+          <div class="slide"><img src="images/krol.png" alt="Obraz 3" /></div>
         </div>
 
         <div class="controls">
-          <label for="slide1">1</label>
-          <label for="slide2">2</label>
-          <label for="slide3">3</label>
+          <label for="slide1">⬅️</label>
+          <label for="slide2"></label>
+          <label for="slide3">➡️</label>
         </div>
       </div>
 
       <div class="carousel">
-        <h1>Legendarny</h1>
+        <h1>Obecny</h1>
         <input type="radio" name="carousel2" id="slide4" checked />
         <input type="radio" name="carousel2" id="slide5" />
         <input type="radio" name="carousel2" id="slide6" />
 
         <div class="slides">
-          <div class="slide"><img src="image4.jpg" alt="Obraz 4" /></div>
+          <div class="slide">
+            <a href="aronian.html"
+              ><img src="images/aronian.png" alt="Obraz 4"
+            /></a>
+            <div class="carousel-caption"><h1>Lewon Aronian</h1></div>
+          </div>
           <div class="slide"><img src="image5.jpg" alt="Obraz 5" /></div>
-          <div class="slide"><img src="image6.jpg" alt="Obraz 6" /></div>
+          <div class="slide"><img src="images/krol.png" alt="Obraz 6" /></div>
         </div>
 
         <div class="controls">
-          <label for="slide4">1</label>
-          <label for="slide5">2</label>
-          <label for="slide6">3</label>
+          <label for="slide4">⬅️</label>
+          <label for="slide5"></label>
+          <label for="slide6">➡️</label>
         </div>
       </div>
     </div>
