--- a/wladca.html
+++ b/wladca.html
@@ -81,10 +81,16 @@
         bottom: 0;
         color: white;
       }
+      .zmien3 {
+        float: left;
+      }
     </style>
   </head>
   <body>
     <div class="carousel-container">
+      <div class="zmien3">
+        <a href="zamek.html"><button>Wróć</button></a>
+      </div>
       <div class="carousel">
         <h1>Legendarny</h1>
         <input type="radio" name="carousel1" id="slide1" checked />
