--- a/wladca.html
+++ b/wladca.html
@@ -19,7 +19,7 @@
       }
       .carousel-container {
         display: flex;
-        gap: 20px;
+        gap: 200px;
       }
       .carousel {
         width: 300px;
@@ -88,9 +88,6 @@
   </head>
   <body>
     <div class="carousel-container">
-      <div class="zmien3">
-        <a href="zamek.html"><button>Wróć</button></a>
-      </div>
       <div class="carousel">
         <h1>Legendarny</h1>
         <input type="radio" name="carousel1" id="slide1" checked />
@@ -99,7 +96,7 @@
 
         <div class="slides">
           <div class="slide">
-            <a href="karpow.html"
+            <a href="karpov.html"
               ><img src="images/karpov.png" alt="Obraz 1"
             /></a>
             <div class="carousel-caption"><h1>Anatolij Karpow</h1></div>
@@ -137,6 +134,9 @@
           <label for="slide5"></label>
           <label for="slide6">➡️</label>
         </div>
+      </div>
+      <div class="zmien3">
+        <a href="zamek.html"><button>Wróć</button></a>
       </div>
     </div>
   </body>
