--- a/wladca.html
+++ b/wladca.html
@@ -96,7 +96,7 @@
 
         <div class="slides">
           <div class="slide">
-            <a href="karpov.html"
+            <a href="szachista.html"
               ><img src="images/karpov.png" alt="Obraz 1"
             /></a>
             <div class="carousel-caption"><h1>Anatolij Karpow</h1></div>
