--- a/zamek.html
+++ b/zamek.html
@@ -92,7 +92,7 @@
   <body>
     <div class="image-container">
      
-      <a href="wladca.html"><img src="images/drzwi.png"  class="top-left-image" />
+      <a href="rodzina.html"><img src="images/drzwi.png"  class="top-left-image" />
       <div class="image-caption" ></a>Władca</div>
     </div>
     <div class="zmien3">
