--- a/rodzina.html
+++ b/rodzina.html
@@ -115,9 +115,9 @@
         </div>
 
         <div class="controls">
-          <label for="slide1">⬅️</label>
+          <label for="slide1">❮</label>
           <label for="slide2"></label>
-          <label for="slide3">➡️</label>
+          <label for="slide3">❯</label>
         </div>
       </div>
 
@@ -139,9 +139,9 @@
         </div>
 
         <div class="controls">
-          <label for="slide4">⬅️</label>
+          <label for="slide4">❮</label>
           <label for="slide5"></label>
-          <label for="slide6">➡️</label>
+          <label for="slide6">❯</label>
         </div>
       </div>
 
@@ -163,9 +163,9 @@
         </div>
 
         <div class="controls">
-          <label for="slide7">⬅️</label>
+          <label for="slide7">❮</label>
           <label for="slide8"></label>
-          <label for="slide9">➡️</label>
+          <label for="slide9">❯</label>
         </div>
       </div>
       <div class="zmien3">
