--- a/rodzina.html
+++ b/rodzina.html
@@ -129,9 +129,7 @@
 
         <div class="slides">
           <div class="slide">
-            <a href="aronian.html"
-              ><img src="images/judi.png" alt="Obraz 4"
-            /></a>
+            <a href="polgar.html"><img src="images/judi.png" /></a>
             <div class="carousel-caption"><h1>Judit Polgár</h1></div>
           </div>
           <div class="slide"><img src="image5.jpg" alt="Obraz 5" /></div>
