--- a/karta3.html
+++ b/karta3.html
@@ -265,7 +265,7 @@
 
       <div id="topbar">
         <div id="topbarL">
-          <a href="mapa.html"
+          <a href="kosmos.html"
             ><img src="images/mapa.png" width="100" height="100"
           /></a>
         </div>
