--- a/mapa.html
+++ b/mapa.html
@@ -11,7 +11,7 @@
         align-items: center;
         height: 100vh;
         margin: 0;
-        background-image: url("images/mapa.png");
+        background-image: url("images/mapa2.png");
         background-size: cover;
       }
 
@@ -99,7 +99,7 @@
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
       <div class="zmien3">
-        <a href="karta3.html"><button>Wróć</button></a>
+        <a href="kraina.html"><button>Wróć</button></a>
       </div>
     </div>
    
@@ -108,9 +108,9 @@
       <h2>🔒</h2></a>
     </div>
     <div class="tile tile-2"><h2>🔒</h2></div>
-    <div class="tile tile-3"><a href="jezioro.html"><h3>🔒Włoskie jezioro</h3></a></div>
-    <div class="tile tile-4"><a href="zamek.html"><h3>🔒Zamek Caro-Kann</h3></a></div>
-    <div class="tile tile-5"><h2>🔒</h2></div>
+    <div class="tile tile-3"><h3>🔒</h3></div>
+    <div class="tile tile-5"><a href="zamek.html"><h3>Zamek Caro-Kann</h3></a></div>
+    <div class="tile tile-4"><h2>🔒</h2></div>
     
   </body>
 </html>
