--- a/karta5.html
+++ b/karta5.html
@@ -216,7 +216,7 @@
       <div id="topbarL">
         <div class="tooltip">
           <a href="kosmos.html"
-            ><img src="images/mapa.png" width="100" height="100"
+            ><img src="images/kosmos.png" width="100" height="100"
           /></a>
           <span class="tooltiptext"><h5>Pzejdź!</h5></span>
         </div>
