--- a/karta3.html
+++ b/karta3.html
@@ -266,7 +266,7 @@
       <div id="topbar">
         <div id="topbarL">
           <a href="kosmos.html"
-            ><img src="images/mapa.png" width="100" height="100"
+            ><img src="images/kosmos.png" width="100" height="100"
           /></a>
         </div>
         <div id="topbarR">
