--- a/kosmos.html
+++ b/kosmos.html
@@ -100,8 +100,7 @@
       <h2>🔒</h2></a>
     </div>
     <div class="tile tile-2"><h2>🔒</h2></div>
-    <div class="tile tile-3"><a href="kraina.html"><h1>Ziemia 🗺
-    </h1></a></div>
+    <div class="tile tile-3"><a href="kraina.html"><img src="images/kont.png" width="100" height="100"/></a></div>
     
     
   </body>
