--- a/kraina.html
+++ b/kraina.html
@@ -108,7 +108,7 @@
       <h2>🔒</h2></a>
     </div>
     <div class="tile tile-2"><h2>🔒</h2></div>
-    <div class="tile tile-3"><a href="mapa.html"><h3>Kraina Caro-Kann</h3></a></div>
+    <div class="tile tile-3"><a href="mapa.html"><img src="images/mapa2.png" width="100" height="100"/></a></div>
     <div class="tile tile-4"><h3>🔒</h3></div>
     <div class="tile tile-5"><a href="jezioro.html"><h2>🔒Włoska Kraina</h2></a></div>
     
