--- a/mapa.html
+++ b/mapa.html
@@ -110,7 +110,7 @@
     <div class="tile tile-2"><h2>🔒</h2></div>
     <div class="tile tile-3"><h3>🔒</h3></div>
     <div class="tile tile-5"><a href="zamek.html"><h3>Zamek Caro-Kann</h3></a></div>
-    <div class="tile tile-4"><h2>🔒</h2></div>
+    <div class="tile tile-4"><a href="jezioro.html"><h3>Włoska wioska</h3></a></div>
     
   </body>
 </html>
