--- a/kosmos.html
+++ b/kosmos.html
@@ -34,9 +34,19 @@
           0.8
         ); /* Zmieniamy kolor na żółty po najechaniu */
         box-shadow: 0 8px 16px rgba(255, 204, 0, 0.6); /* Dodajemy świecący efekt */
-        transform: scale(2); /* Powiększamy kafelek o 10% */
+        transform: scale(1.1); /* Powiększamy kafelek o 10% */
       }
 
+      .tile-3:hover {
+        background-color: rgba(
+          255,
+          204,
+          0,
+          0.8
+        ); /* Zmieniamy kolor na żółty po najechaniu */
+        box-shadow: 0 8px 16px rgba(255, 204, 0, 0.6); /* Dodajemy świecący efekt */
+        transform: scale(2); /* Powiększamy kafelek o 10% */
+      }
       /* Pozycje kafelków */
       .tile-1 {
         top: 20%;
