--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <h1>Strona magii szachowej</h1>
       <a href="wybor.html"><button>Uczeń Maga</button></a>
       <a href="mag.html"><button>Mag</button></a>
+      <a href="zajecia.html"><button>Nauczyciel</button></a>
     </div>
   </body>
 </html>
