--- a/zajecia.html
+++ b/zajecia.html
@@ -48,27 +48,27 @@
     <section>
       <h2>Program kursu</h2>
       <ul>
-        <li><a href="#">Edukacyjne i wychowawcze walory gry w szachy.</a></li>
-        <li>Podstawy gry w szachy</li>
-        <a href="#">- szachownica i jej właściwości</a
+        <li><a href="edu.html">Edukacyjne i wychowawcze walory gry w szachy.</a></li>
+        <li>Podstawy gry w szachy:</li>
+        <a href="sza.html">- szachownica i jej właściwości</a
         ><br />
-        <a href="#">- figury i ich wartości,ruchy</a
+        <a href="figury.html">- figury i ich wartości,ruchy</a
         ><br />
-        <a href="#">- zasady posunięć bierek szachowych</a
+        <a href="figury.html">- zasady posunięć bierek szachowych</a
         ><br />
-        <a href="#">- posunięcia specjalne</a
+        <a href="posu.html">- posunięcia specjalne</a
         ><br />
-        <a href="#">- zasady ogólne</a
+        <a href="zasady.html">- zasady ogólne</a
         ><br />
         <a href="#">- elementy gry praktycznej</a>
-        <li><a href="#">Podstaw gry - ćwiczenia</a></li>
-        <li>Elementarne zasady debiutowe.</li>
+        <li><a href="#">Podstaw gry - ćwiczenia.</a></li>
+        <li>Elementarne zasady debiutowe:</li>
         <a href="#">- fazy partii szachowej</a
         ><br />
         <a href="#">- 3 zasady dobrego debiutu</a
         ><br />
         <a href="#">- przykładowa partia</a>
-        <li>Notacja szachowa</li>
+        <li>Notacja szachowa:</li>
         <a href="#">- zasady zapisu pozycji</a
         ><br />
         <a href="#">- zapis partii</a
@@ -77,15 +77,15 @@
         <li>
           <a href="#">Gra praktyczna z zapisem oraz trenowaniem debiutów.</a>
         </li>
-        <li>Podstawy teorii debiutów</li>
+        <li>Podstawy teorii debiutów:</li>
         <a href="#">- klasyfikacja debiutów szachowych</a
         ><br />
         <a href="#">- praktyczne przykłady najpopularniejszych debiutów</a
         ><br />
         <a href="#">- pułapki debiutowe</a>
-        <li><a href="#">Gra praktyczna</a></li>
-        <li><a href="#">Historia szachów</a></li>
-        <li>Etap gry środkowej</li>
+        <li><a href="#">Gra praktyczna.</a></li>
+        <li><a href="#">Historia szachów.</a></li>
+        <li>Etap gry środkowej:</li>
         <a href="#">- podstawy strategii</a
         ><br />
         <a href="#"
@@ -105,7 +105,7 @@
         <br />
         <a href="#">- realizacja przewagi</a>
         <li>
-          <a href="#">Innowacje technologiczne na zajęciach szachowych</a>
+          <a href="#">Innowacje technologiczne na zajęciach szachowych.</a>
         </li>
         <li>Podstawy rozgrywania końcówek: techniki matowania</li>
         <a href="#">- dwiema wieżami</a
@@ -115,17 +115,17 @@
         <a href="#">- królem i hetmanem</a
         ><br />
         <a href="#">-ćwiczenia praktyczne</a>
-        <li>Podstawy teorii końcówek</li>
+        <li>Podstawy teorii końcówek:</li>
         <a href="#">- rodzaje końcówek</a
         ><br />
         <a href="#">- rola i zadania króla w końcowym etapie partii</a
         ><br />
         <a href="#">- motywy wieżowe w końcówkach</a>
-        <li><a href="#">Motywy patowe</a></li>
-        <li><a href="#">Promocja pionka</a></li>
-        <li><a href="#">Figury w walce z dochodzącym pionkiem</a></li>
+        <li><a href="#">Motywy patowe.</a></li>
+        <li><a href="#">Promocja pionka.</a></li>
+        <li><a href="#">Figury w walce z dochodzącym pionkiem.</a></li>
         <li>
-          <a href="#">Gra praktyczna uproszczonych pozycji w końcówkach</a>
+          <a href="#">Gra praktyczna uproszczonych pozycji w końcówkach.</a>
         </li>
         <li>
           <a href="#"
@@ -138,27 +138,27 @@
           <a href="#"
             >Sędziowanie: rola, zadania i uprawnienia sędziego szachowego,
             zapoznanie z Kodeksem Szachowym i podstawowymi przepisami
-            turniejowymi, analiza wybranych przepisów turniejowych</a
+            turniejowymi, analiza wybranych przepisów turniejowych.</a
           >
         </li>
-        <li><a href="#">Symultana z zapisem</a></li>
+        <li><a href="#">Symultana z zapisem.</a></li>
         <li>
           <a href="#"
             >Podstawowe zasady metodyczne nauczania gry w szachy dzieci w wieku
-            wczesnoszkolnym
+            wczesnoszkolnym.
           </a>
         </li>
         <li>
           <a href="#"
-            >Prowadzenie zajęć szachowych w pełnym oddziale klasowym</a
+            >Prowadzenie zajęć szachowych w pełnym oddziale klasowym.</a
           >
         </li>
-        <li><a href="#">Praca z uczniem słabszym oraz zdolnym</a></li>
-        <li><a href="#">Materiały metodyczne i dydaktyczne</a></li>
-        <li><a href="#">Miejsce szachów w szkole</a></li>
+        <li><a href="#">Praca z uczniem słabszym oraz zdolnym.</a></li>
+        <li><a href="#">Materiały metodyczne i dydaktyczne</a></l.i>
+        <li><a href="#">Miejsce szachów w szkole.</a></li>
         <li>
           <a href="#"
-            >Przypomnienie zasad turniejowych oraz nauka korzystania z zegara</a
+            >Przypomnienie zasad turniejowych oraz nauka korzystania z zegara.</a
           >
         </li>
       </ul>
