--- a/jezioro.html
+++ b/jezioro.html
@@ -49,12 +49,12 @@
 
       .tile-4 {
         top: 70%;
-        left: 80%;
+        left: 60%;
       }
 
       .tile-5 {
         top: 80%;
-        left: 20%;
+        left: 10%;
       }
       .image-container {
         position: absolute;
@@ -111,7 +111,8 @@
     </div>
     <div class="tile tile-4">
       <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
-        ><h3>Smarzona Wątróbka</h3></a
+        ><img src="images/smok.png" width="100px" height="100px" />
+        <h3>Smarzona Wątróbka</h3></a
       >
     </div>
     <div class="tile tile-5">
