--- a/jezioro.html
+++ b/jezioro.html
@@ -92,6 +92,32 @@
 
         transform: scale(1.1); /* Powiększamy kafelek o 10% */
       }
+      .tooltip {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+      }
+      .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 50px; /* Zmieniona szerokość dymka */
+        background-color: rgba(0, 0, 0, 0.7);
+        color: #fff;
+        text-align: center;
+        border-radius: 5px;
+        padding: 1px; /* Zwiększony padding (odstępy wewnętrzne dymka) */
+        position: absolute;
+        z-index: 1;
+        top: 25%; /* Ustawienie dymka poniżej tekstu */
+        left: 110%;
+        opacity: 0;
+        transition: opacity 0.3s;
+        font-size: 10px; /* Zmieniony rozmiar tekstu w dymku */
+      }
+
+      .tooltip:hover .tooltiptext {
+        visibility: visible;
+        opacity: 1;
+      }
     </style>
   </head>
   <body>
@@ -101,7 +127,10 @@
     </div>
     <div class="tile1"></div>
     <div class="tile tile-2">
-      <img src="images/duck.png" width="100px" height="100px" />
+      <div class="tooltip">
+        <img src="images/duck.png" width="100px" height="100px" />
+        <span class="tooltiptext"><h5>Kontratak Traxlera</h5></span>
+      </div>
     </div>
     <div class="tile tile-3">
       <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
