--- a/zajecia.html
+++ b/zajecia.html
@@ -60,22 +60,22 @@
         ><br />
         <a href="zasady.html">- zasady ogólne</a
         ><br />
-        <a href="#">- elementy gry praktycznej</a>
-        <li><a href="#">Podstaw gry - ćwiczenia.</a></li>
+        <a href="gra.html">- elementy gry praktycznej</a>
+        <li><a href="zadania.html">Podstaw gry - ćwiczenia.</a></li>
         <li>Elementarne zasady debiutowe:</li>
-        <a href="#">- fazy partii szachowej</a
+        <a href="debiut.html">- fazy partii szachowej</a
         ><br />
-        <a href="#">- 3 zasady dobrego debiutu</a
+        <a href="3.html">- 3 zasady dobrego debiutu</a
         ><br />
-        <a href="#">- przykładowa partia</a>
+        <a href="przyk.html">- przykładowa partia</a>
         <li>Notacja szachowa:</li>
-        <a href="#">- zasady zapisu pozycji</a
+        <a href="notacja.html">- zasady zapisu pozycji</a
         ><br />
-        <a href="#">- zapis partii</a
+        <a href="sposoby.html">- zapis partii</a
         ><br />
-        <a href="#">- sposoby wykorzystania zapisu w praktyce</a>
+        <a href="sposoby.html">- sposoby wykorzystania zapisu w praktyce</a>
         <li>
-          <a href="#">Gra praktyczna z zapisem oraz trenowaniem debiutów.</a>
+          <a href="prak.html">Gra praktyczna z zapisem oraz trenowaniem debiutów.</a>
         </li>
         <li>Podstawy teorii debiutów:</li>
         <a href="#">- klasyfikacja debiutów szachowych</a
@@ -83,8 +83,8 @@
         <a href="#">- praktyczne przykłady najpopularniejszych debiutów</a
         ><br />
         <a href="#">- pułapki debiutowe</a>
-        <li><a href="#">Gra praktyczna.</a></li>
-        <li><a href="#">Historia szachów.</a></li>
+        <li><a href="prak.html">Gra praktyczna.</a></li>
+        <li><a href="historia.html">Historia szachów.</a></li>
         <li>Etap gry środkowej:</li>
         <a href="#">- podstawy strategii</a
         ><br />
