--- a/mapa.html
+++ b/mapa.html
@@ -78,6 +78,7 @@
       .top-left-image {
         width: 200px; /* Szerokość obrazka */
         height: auto; /* Wysokość dopasowana proporcjonalnie */
+        border-radius: 50%;
       }
 
       /* Styl dla napisu */
