--- a/jezioro.html
+++ b/jezioro.html
@@ -79,12 +79,11 @@
           transform 0.3s ease;
         top: 20%;
         left: 20%;
-        font-size: 0px;
       }
 
       .tile1:hover {
         background-image: url("images/lampa1.png");
-        font-size: 25px;
+
         color: #fff;
         transform: scale(1.1); /* Powiększamy kafelek o 10% */
       }
@@ -121,7 +120,7 @@
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
-    <div class="tile1">Kontratak Traxlera</div>
+    <div class="tile1"></div>
     <div class="tile tile-2">
       <div class="tooltip">
         <img src="images/duck.png" width="100px" height="100px" />
