--- a/jezioro.html
+++ b/jezioro.html
@@ -120,7 +120,12 @@
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
-    <div class="tile1"></div>
+    <div class="tile1">
+      <div class="tooltip">
+        <img src="images/duck.png" width="100px" height="100px" />
+        <span class="tooltiptext"><h5>Kontratak Traxlera</h5></span>
+      </div>
+    </div>
     <div class="tile tile-2">
       <div class="tooltip">
         <img src="images/duck.png" width="100px" height="100px" />
