--- a/jezioro.html
+++ b/jezioro.html
@@ -87,8 +87,6 @@
         transform: scale(1.1); /* Powiększamy kafelek o 10% */
       }
       .tooltip {
-        position: relative;
-        display: inline-block;
         cursor: pointer;
       }
       .tooltip .tooltiptext {
@@ -119,7 +117,9 @@
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
-    <div class="tile1"></div>
+    <div class="tile1 tooltip">
+      <span class="tooltiptext"><h5>Kontratak Traxlera</h5></span>
+    </div>
     <div class="tile tile-2">
       <div class="tooltip">
         <img src="images/duck.png" width="100px" height="100px" />
