--- a/mapa.html
+++ b/mapa.html
@@ -27,12 +27,7 @@
       }
 
       .tile:hover {
-        background-color: rgba(
-          255,
-          204,
-          0,
-          0.8
-        ); /* Zmieniamy kolor na żółty po najechaniu */
+       
         box-shadow: 0 8px 16px rgba(255, 204, 0, 0.6); /* Dodajemy świecący efekt */
         transform: scale(1.1); /* Powiększamy kafelek o 10% */
       }
@@ -110,8 +105,8 @@
     </div>
     <div class="tile tile-2"><h2>🔒</h2></div>
     <div class="tile tile-3"><h3>🔒</h3></div>
-    <div class="tile tile-5"><a href="zamek.html"><h3>Zamek Caro-Kann</h3></a></div>
-    <div class="tile tile-4"><a href="jezioro.html"><h3>Włoska wioska</h3></a></div>
+    <div class="tile tile-5"><a href="zamek.html"><h1>⬇️</h1></a></div>
+    <div class="tile tile-4"><a href="jezioro.html"><h1>⬇️</h1></a></div>
     
   </body>
 </html>
