--- a/zamek.html
+++ b/zamek.html
@@ -104,8 +104,8 @@
       <h2>🔒</h2></a>
     </div>
     <div class="tile tile-2"><h2>🔒</h2></div>
-    <div class="tile tile-3"><h2>Wieża</h2></div>
+    <div class="tile tile-3"><h2></h2></div>
     <div class="tile tile-4"><a href="ranking.html"><h2>🔒</h2></a></div>
-    <div class="tile tile-5"><h2>Lochy</h2></div>
+    <div class="tile tile-5"><h2></h2></div>
   </body>
 </html>
