--- a/karta3.html
+++ b/karta3.html
@@ -242,7 +242,7 @@
 
   <body>
     <div class="zmien3">
-      <a href="wybor.html"><button>Wróć</button></a>
+      <a href="karta5.html"><button>Wróć</button></a>
     </div>
 
       <div id="topbar">
