--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <body>
     <div class="content">
       <h1>Strona magii szachowej</h1>
-      <a href="wybor.html"><button>Uczeń Maga</button></a>
+      <a href="karta5.html"><button>Uczeń Maga</button></a>
       <a href="mag.html"><button>Mag</button></a>
       <a href="zajecia.html"><button>Nauczyciel</button></a>
     </div>
