--- a/karta5.html
+++ b/karta5.html
@@ -53,7 +53,7 @@
 
       #topbarL {
         float: left;
-
+        font-size: 20px;
         padding: 10px;
         width: 138px;
         opacity: 0.9;
