--- a/posu.html
+++ b/posu.html
@@ -3,41 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Posunięcia specjalne w szachach</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f4f8;
-        color: #333;
-        padding: 20px;
-      }
-      header {
-        text-align: center;
-        background-color: #1e3a8a;
-        color: white;
-        padding: 30px 0;
-        border-radius: 10px;
-      }
-      section {
-        margin-top: 30px;
-        background-color: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      }
-      footer {
-        text-align: center;
-        margin-top: 40px;
-        font-size: 0.9em;
-        color: #666;
-      }
-      a {
-        color: #1e3a8a;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <header>
