--- a/zajecia.html
+++ b/zajecia.html
@@ -78,43 +78,43 @@
           <a href="prak.html">Gra praktyczna z zapisem oraz trenowaniem debiutów.</a>
         </li>
         <li>Podstawy teorii debiutów:</li>
-        <a href="#">- klasyfikacja debiutów szachowych</a
+        <a href="deb2.html">- klasyfikacja debiutów szachowych</a
         ><br />
-        <a href="#">- praktyczne przykłady najpopularniejszych debiutów</a
+        <a href="deb3.html">- praktyczne przykłady najpopularniejszych debiutów</a
         ><br />
-        <a href="#">- pułapki debiutowe</a>
+        <a href="deb4.html">- pułapki debiutowe</a>
         <li><a href="prak.html">Gra praktyczna.</a></li>
         <li><a href="historia.html">Historia szachów.</a></li>
         <li>Etap gry środkowej:</li>
-        <a href="#">- podstawy strategii</a
+        <a href="stra.html">- podstawy strategii</a
         ><br />
-        <a href="#"
+        <a href="motywy.html"
           >- elementarne motywy taktyczne (widełki, związanie, atak z
           odsłony)</a
         ><br />
-        <a href="#">- gra praktyczna</a>
+        <a href="prak.html">- gra praktyczna</a>
         <br />
-        <a href="#">- technika liczenia wariantów</a
+        <a href="tech.html">- technika liczenia wariantów</a
         ><br />
-        <a href="#">- ofiara (poświęcenie)</a
+        <a href="ofiary.html">- ofiara (poświęcenie)</a
         ><br />
-        <a href="#"
+        <a href="mot.html"
           >- wybrane motywy taktyczne (rożen, odciągnięcie, zaciągnięcie)</a
         ><br />
-        <a href="#">- motywy matowe (mat Beniowskiego, szewski, 1-8 linia)</a>
+        <a href="mot2.html">- motywy matowe (mat Beniowskiego, szewski, 1-8 linia)</a>
         <br />
-        <a href="#">- realizacja przewagi</a>
+        <a href="przewagi.html">- realizacja przewagi</a>
         <li>
-          <a href="#">Innowacje technologiczne na zajęciach szachowych.</a>
+          <a href="inowacje.html">Innowacje technologiczne na zajęciach szachowych.</a>
         </li>
         <li>Podstawy rozgrywania końcówek: techniki matowania</li>
-        <a href="#">- dwiema wieżami</a
+        <a href="2wieze.html">- dwiema wieżami</a
         ><br />
-        <a href="#">- królem i wieżą</a
+        <a href="krol.html">- królem i wieżą</a
         ><br />
-        <a href="#">- królem i hetmanem</a
+        <a href="hetman.html">- królem i hetmanem</a
         ><br />
-        <a href="#">-ćwiczenia praktyczne</a>
+        <a href="tech2.html">-ćwiczenia praktyczne</a>
         <li>Podstawy teorii końcówek:</li>
         <a href="#">- rodzaje końcówek</a
         ><br />
