--- a/historia.html
+++ b/historia.html
@@ -3,49 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Historia szachów</title>
-    <style>
-      body {
-        font-family: Georgia, serif;
-        background-color: #fdfdfd;
-        color: #222;
-        padding: 20px;
-        line-height: 1.6;
-      }
-      header {
-        text-align: center;
-        background-color: #1e3a8a;
-        color: white;
-        padding: 30px 0;
-        border-radius: 10px;
-      }
-      section {
-        margin-top: 30px;
-        background-color: #ffffff;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      }
-      h2 {
-        color: #1f2937;
-        margin-top: 0;
-      }
-      ul {
-        margin-left: 20px;
-      }
-      footer {
-        text-align: center;
-        margin-top: 40px;
-        font-size: 0.9em;
-        color: #555;
-      }
-      a {
-        color: #1e40af;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <header>
