--- a/przyk.html
+++ b/przyk.html
@@ -3,59 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Przykładowe partie szachowe</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f4f8;
-        color: #333;
-        padding: 20px;
-      }
-      header {
-        text-align: center;
-        background-color: #1e3a8a;
-        color: white;
-        padding: 30px 0;
-        border-radius: 10px;
-      }
-      section {
-        margin-top: 30px;
-        background-color: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-      }
-      h2 {
-        color: #1e3a8a;
-      }
-      .game {
-        background-color: #eef1f5;
-        padding: 15px;
-        border-radius: 8px;
-        margin-bottom: 20px;
-      }
-      .game p {
-        margin: 5px 0;
-      }
-      code {
-        background-color: #ddd;
-        padding: 2px 6px;
-        border-radius: 4px;
-        font-family: monospace;
-      }
-      footer {
-        text-align: center;
-        margin-top: 40px;
-        font-size: 0.9em;
-        color: #666;
-      }
-      a {
-        color: #1e3a8a;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <header>
