--- a/sposoby.html
+++ b/sposoby.html
@@ -3,54 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Zastosowanie notacji szachowej w praktyce</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f8fafc;
-        color: #333;
-        padding: 20px;
-      }
-      header {
-        text-align: center;
-        background-color: #1e40af;
-        color: white;
-        padding: 30px 0;
-        border-radius: 10px;
-      }
-      section {
-        margin-top: 30px;
-        background-color: white;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-      }
-      h2 {
-        color: #1e40af;
-      }
-      ul,
-      ol {
-        margin-left: 20px;
-      }
-      code {
-        background-color: #e2e8f0;
-        padding: 2px 6px;
-        border-radius: 4px;
-        font-family: monospace;
-      }
-      footer {
-        text-align: center;
-        margin-top: 40px;
-        font-size: 0.9em;
-        color: #666;
-      }
-      a {
-        color: #1e40af;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <header>
