--- a/zajecia.html
+++ b/zajecia.html
@@ -116,26 +116,26 @@
         ><br />
         <a href="tech2.html">-ćwiczenia praktyczne</a>
         <li>Podstawy teorii końcówek:</li>
-        <a href="#">- rodzaje końcówek</a
+        <a href="kon.html">- rodzaje końcówek</a
         ><br />
-        <a href="#">- rola i zadania króla w końcowym etapie partii</a
+        <a href="kon2.html">- rola i zadania króla w końcowym etapie partii</a
         ><br />
-        <a href="#">- motywy wieżowe w końcówkach</a>
-        <li><a href="#">Motywy patowe.</a></li>
-        <li><a href="#">Promocja pionka.</a></li>
-        <li><a href="#">Figury w walce z dochodzącym pionkiem.</a></li>
+        <a href="kon3.html">- motywy wieżowe w końcówkach</a>
+        <li><a href="pat.html">Motywy patowe.</a></li>
+        <li><a href="pionek.html">Promocja pionka.</a></li>
+        <li><a href="fig.html">Figury w walce z dochodzącym pionkiem.</a></li>
         <li>
-          <a href="#">Gra praktyczna uproszczonych pozycji w końcówkach.</a>
+          <a href="grapra.html">Gra praktyczna uproszczonych pozycji w końcówkach.</a>
         </li>
         <li>
-          <a href="#"
+          <a href="sys.html"
             >System rozgrywek: rodzaje turniejów szachowych, ranking i kategoria
             szachowa, rozgrywki szachowe w polskim systemie sportu młodzieżowego
             i szkolnego.</a
           >
         </li>
         <li>
-          <a href="#"
+          <a href="sedziowie.html"
             >Sędziowanie: rola, zadania i uprawnienia sędziego szachowego,
             zapoznanie z Kodeksem Szachowym i podstawowymi przepisami
             turniejowymi, analiza wybranych przepisów turniejowych.</a
