--- a/karta5.html
+++ b/karta5.html
@@ -140,7 +140,7 @@
       #footer {
         clear: both;
         background-color: #676969;
-        margin-top: 15px;
+        margin-bottom: 15px;
         opacity: 0.9;
         color: #ffffff;
         padding: 10px;
@@ -207,6 +207,7 @@
         color: #fff;
         transform: scale(1.1);
       }
+     
     </style>
   </head>
 
@@ -273,6 +274,14 @@
     </div>
     <div style="clear:both"></div>
 
+
+    
+    <div id="footer">
+      <div class="tooltip">
+        <a href="karta3.html"><h3>Limity do V kategorii</h3></a>
+        <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+      </div>
+    </div>
 
     <div id="sidebar">
       <div class="zmien1"><h2>Bronie</h2></div>
