--- a/karta5.html
+++ b/karta5.html
@@ -259,7 +259,15 @@
       
       <div id="barM">
       <div class="tooltip">
-        <a href="karta3.html"><h3>Twoje misje</h3></a>
+        <a href="karta3.html"><h3>Twoje misje | </h3></a>
+        <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        <div style="clear:both"></div>
+      </div> <div class="tooltip">
+        <a href="awans.html"><h3>Awans na III kategorię |</h3></a>
+        <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+      </div>
+      <div class="tooltip">
+        <a href="awans2.html"><h3>Awans na 13 pozycję</h3></a>
         <span class="tooltiptext"><h5>Pzejdź!</h5></span>
       </div></div>
 
@@ -273,15 +281,6 @@
       </div>
     </div>
     <div style="clear:both"></div>
-
-
-    
-    <div id="footer">
-      <div class="tooltip">
-        <a href="karta3.html"><h3>Limity do V kategorii</h3></a>
-        <span class="tooltiptext"><h5>Pzejdź!</h5></span>
-      </div>
-    </div>
 
     <div id="sidebar">
       <div class="zmien1"><h2>Bronie</h2></div>
