--- a/prak.html
+++ b/prak.html
@@ -3,53 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Gra praktyczna – Zagraj w szachy</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f4f8;
-        color: #333;
-        padding: 20px;
-      }
-      header {
-        text-align: center;
-        background-color: #1e3a8a;
-        color: white;
-        padding: 30px 0;
-        border-radius: 10px;
-      }
-      #board {
-        width: 400px;
-        margin: 30px auto;
-      }
-      .controls {
-        text-align: center;
-        margin-top: 20px;
-      }
-      .controls button {
-        background-color: #1e3a8a;
-        color: white;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 8px;
-        cursor: pointer;
-      }
-      .controls button:hover {
-        background-color: #3b60d1;
-      }
-      footer {
-        text-align: center;
-        margin-top: 40px;
-        font-size: 0.9em;
-        color: #666;
-      }
-      a {
-        color: #1e3a8a;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
+    <link rel="stylesheet" href="style1.css" />
   </head>
   <body>
     <header>
