--- a/zajecia.html
+++ b/zajecia.html
@@ -48,7 +48,7 @@
     <section>
       <h2>Program kursu</h2>
       <ul>
-        <li><a href="https://app.szkolkaszachowa.pl/">Logowania do systemu treningowego</a></li>
+        <li><a href="log.html">Jak się zalogować do aplikacji.</a></li>
         <li><a href="edu.html">Edukacyjne i wychowawcze walory gry w szachy.</a></li>
         <li>Podstawy gry w szachy:</li>
         <a href="sza.html">- szachownica i jej właściwości</a
