--- a/zajecia.html
+++ b/zajecia.html
@@ -142,23 +142,23 @@
             turniejowymi, analiza wybranych przepisów turniejowych.</a
           >
         </li>
-        <li><a href="#">Symultana z zapisem.</a></li>
+        <li><a href="symultana.html">Symultana z zapisem.</a></li>
         <li>
-          <a href="#"
+          <a href="dzieci.html"
             >Podstawowe zasady metodyczne nauczania gry w szachy dzieci w wieku
             wczesnoszkolnym.
           </a>
         </li>
         <li>
-          <a href="#"
+          <a href="klasa.html"
             >Prowadzenie zajęć szachowych w pełnym oddziale klasowym.</a
           >
         </li>
-        <li><a href="#">Praca z uczniem słabszym oraz zdolnym.</a></li>
-        <li><a href="#">Materiały metodyczne i dydaktyczne</a></l.i>
-        <li><a href="#">Miejsce szachów w szkole.</a></li>
+        <li><a href="zdolny.html">Praca z uczniem słabszym oraz zdolnym.</a></li>
+        <li><a href="materialy.html">Materiały metodyczne i dydaktyczne</a></l.i>
+        <li><a href="miejsce.html">Miejsce szachów w szkole.</a></li>
         <li>
-          <a href="#"
+          <a href="zegar.html"
             >Przypomnienie zasad turniejowych oraz nauka korzystania z zegara.</a
           >
         </li>
