--- a/index.html
+++ b/index.html
@@ -51,9 +51,15 @@
         border-color: #eba627;
         transform: scale(1.1);
       }
+      .zmien3 {
+        float: right;
+      }
     </style>
   </head>
   <body>
+    <div class="zmien3">
+      <a href="indexB.html"><button>EN</button></a>
+    </div>
     <div class="content">
       <h1>Strona magii szachowej</h1>
       <a href="karta5.html"><button>Uczeń Maga</button></a>
