--- a/karta5.html
+++ b/karta5.html
@@ -5,9 +5,9 @@
     <style>
       body {
         background-image: url("images/mag1.png");
-        background-position: center; /* Wyśrodkowanie tła */
-        background-repeat: no-repeat; /* Zapobiega powtarzaniu tła */
-        background-size: cover; /* Dopasowuje tło do rozmiaru okna */
+        background-position: center; 
+        background-repeat: no-repeat; 
+        background-size: cover; 
       }
 
       #container {
