--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         border-color: #eba627;
         transform: scale(1.1);
       }
+      .eng {
+        font-size: 90%;
+        padding: 5%;
+      }
       .zmien3 {
         float: right;
       }
@@ -58,7 +62,7 @@
   </head>
   <body>
     <div class="zmien3">
-      <a href="indexB.html"><button>EN</button></a>
+      <a href="indexB.html"><button class="eng">EN</button></a>
     </div>
     <div class="content">
       <h1>Strona magii szachowej</h1>
